Changelog for Poi
=================

    (name of developer listed in brackets)

Poi branch maurits-inline-response-adding
-----------------------------------------

- Add PoiMessageFactory.
  [maurits]

- Add method delete(id) for deleting responses.
  [maurits]

- In response adapter rename total to highest.
  [maurits]

- When FCKeditor is installed and an anonymous visitor adds a
  response, make sure this works by using the default html text area
  then.  Same change as in the FCKeditor code itself in r59427.
  [maurits]

- When in config.py DEFAULT_ISSUE_MIME_TYPE is set to text/html, use a
  wysiwyg field in the add response form.  Tested with kupu.  Haul the
  responses through portal_transforms and through linkDetection.
  [maurits]

- Give responses a type additional/clarification/reply.
  [maurits]

- Add browser test for adding a tracker, issue and response.
  [maurits]

- Unit test the response browser views.
  [maurits]

- Use aq_inner.aq_parent to get the parent of an issue.
  [maurits]

- Add unit tests for browser.response.voc2dict.
  [maurits]

- Add unit tests for the adapters.
  [maurits]

- Show border around responses, like in the original layout.
  [maurits]

- Check that the changes within a response are allowed (new severity
  in available_severities, etc).
  [maurits]

- Make difference between available_transitions and
  transitions_for_display; also for the other response options.
  [maurits]

- Add methods sorted_keys/values/items for the ResponseContainer.
  Show the sorted items in the view (so 1, ..., 9, 10 instead of 1,
  10, ..., 9).
  [maurits]

- Store OOBTree and total in a PersistentMapping instead of only the
  OOBTree directly in the annotations.
  [maurits]

- Check radio buttons of response based on current status for all
  options.  Rename options to be in line with the fields of the parent
  Task.
  [maurits]

- Store creator and creation date of response.
  [maurits]
